@@ -39,6 +39,14 @@
       <menuitem action="SelectAll"/>
       <menuitem action="DeselectAll"/>
       <separator/>
+      <menu action="SetRating">
+        <menuitem action="SetRating0"/>
+        <menuitem action="SetRating1"/>
+        <menuitem action="SetRating2"/>
+        <menuitem action="SetRating3"/>
+        <menuitem action="SetRating4"/>
+        <menuitem action="SetRating5"/>
+      </menu>
       <menu action="Move"/>
       <separator/>
       <menuitem action="Delete"/>
