@@ -1,5 +1,14 @@
 2005-12-07  Laurent Sansonetti  <lrz@gnome.org>
 
+	* data/alexandria/ui/menus.xml,
+	  data/alexandria/ui/popups.xml,
+	  lib/alexandria/ui/main_app.rb:
+
+	- Added contextual popup and Edit menu actions to set the rating of the
+	  selected books ;
+	- When right clicking on the books view, select the item/row if the mouse
+	  if on an item/row.
+
 	* lib/alexandria/book.rb:
 
 	Simplify the code.
